--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
+    <a href="/Lab1/Menu/menu.html" target="_blank">Labjjj1</a>
 </body>
 </html>
