--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lab3</title>
 </head>
 <body>
-    <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
-    <a href="/ASM/index.html">ASM</a>
+    
 </body>
 </html>
