--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
     <a href="/ASM/index.html">ASM</a>
+    <a href="/Lab3/index.html">Lab3</a>
 </body>
 </html>
