--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab3</title>
+    <title>Lab3-Form HTML</title>
+    <link rel="stylesheet" href="/Lab3/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
+
 <body>
-    
+    <div class="full">
+        <div class="phieu dien">
+            <div class="Montserrat">
+                <h1>Get in <span class="touch">touch</span></h1>
+                <p class="a">Enim tempor eget pharetra facilisis sed maecenas adipiscing. Eu leo molestie vel, ornare
+                    non id
+                    blandit netus.</p>
+                <form>
+                    <input type="text" class="name" placeholder="Contact name"><br>
+                    <input type="text" class="street" placeholder="Sreet"><br>
+            </div>
+            <div class="Inter"></div>
+            <input type="text" class="city" placeholder="City">
+            <input type="text" class="postcode" placeholder="Postcode"><br>
+            <br>
+            <input type="text" class="contact-phone" placeholder="Contact Phone"><br>
+            <input type="text" class="email" placeholder="Email"><br>
+            <input type="text" class="idea" placeholder="Let's talk about your idea"><br>
+            <input type="file" class="file" placeholder="Upload Additional file">
+            <p class="b">Attach file. File size of your documents should not exceed 10MB</p>
+            <input class="checkbox" type="checkbox">
+            <label for="upload">I want to protect my data by signing an NDA</label><br>
+            <button class="submit" type="submit">Submit</button>
+            </form>
+            <!-- Icon Text -->
+            <div class="icon-wrapper">
+                <!-- Item 1 Phone -->
+                <div class="icon-item">
+                    <img src="./img/Frame 831.png" alt="" />
+                    <div class="icon-text">
+                        <span>Phone</span>
+                        <span class="text">111 111 111</span>
+                    </div>
+                </div>
+                <!-- Item 1 Phone -->
+                <div class="icon-item">
+                    <img src="/Lab3/img/item2.svg" alt="" />
+                    <div class="icon-text">
+                        <span>E-MAIL</span>
+                        <span class="text">info@company.com</span>
+                    </div>
+                </div>
+                <!-- Item 1 Phone -->
+                <div class="icon-item">
+                    <img src="/Lab3/img/item2.svg" alt="" />
+                    <div class="icon-text">
+                        <span>HELPDESK</span>
+                        <span class="text">https://helpdesk.com</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <iframe class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.8636682144106!2d105.74725459999999!3d21.0381403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313455e940879933%3A0xcf10b34e9f1a03df!2zVHLGsOG7nW5nIENhbyDEkeG6s25nIEZQVCBQb2x5dGVjaG5pYw!5e0!3m2!1svi!2s!4v1706272592405!5m2!1svi!2s"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
 </body>
+
 </html>
