--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
-    <a href="/ASM/index.html">ASM</a>
-    <a href="/Lab3/index.html">Lab3</a>
+    <a href="/ASM/index.html" target="_blank">ASM</a>
+    <a href="/Lab3/index.html" target="_blank">Lab3</a>
 </body>
 </html>
