--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
-    <a href="/ASM/index.html" target="_blank">ASM</a>
-    <a href="/Lab3/index.html" target="_blank">Lab3</a>
+    <div class="about-me">
+        <div class="profile-card">
+            <img src="/Lab1/My infor/img/anh-dai-dien.jpeg" alt="Avatar" class="profile-picture">
+            <h1  class="name">Nguyễn Chí Hiệu
+            </h1>
+            <p >18-06-2005</p>
+            <p class="job-title">Sinh viên thiết kế website</p>
+            <p class="location"></p>
+            <p class="email">Ngôn ngữ đã học : C++</p>
+            <div class="card__social">
+          <a target="_black" href="https://www.facebook.com/hieu180605">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a target="_black" href="https://www.instagram.com/_nchieu_05/">
+            <i class="fab fa-instagram-square"></i>
+          </a>
+          <a target="_black" href="https://www.youtube.com/channel/UCYuBMwfm01akrov4tmIWFng">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </div>
+        </div>
+    </div>
+    <br>
+    <div class="study">
+        <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
+        <a href="/ASM/index.html" target="_blank">ASM</a>
+        <a href="/Lab3/index.html" target="_blank">Lab3</a>
+        <a href="/Lab4/index.html" target="_blank"></a>
+    </div>
+ 
+
 </body>
 </html>
