--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -18,7 +18,7 @@
                 <p class="a">Enim tempor eget pharetra facilisis sed maecenas adipiscing. Eu leo molestie vel, ornare
                     non id
                     blandit netus.</p>
-                <form>
+                <form class="thong-tin">
                     <input type="text" class="name" placeholder="Contact name"><br>
                     <input type="text" class="street" placeholder="Sreet"><br>
             </div>
@@ -29,10 +29,13 @@
             <input type="text" class="contact-phone" placeholder="Contact Phone"><br>
             <input type="text" class="email" placeholder="Email"><br>
             <input type="text" class="idea" placeholder="Let's talk about your idea"><br>
-            <input type="file" class="file" placeholder="Upload Additional file">
-            <p class="b">Attach file. File size of your documents should not exceed 10MB</p>
+            <div class="file">
+                <input type="file" placeholder="Upload Additional file">
+                <img src="./img/upload.png" alt="upload">Attach file. File size of your documents should not exceed 10MB
+                <!-- <p class="b">Attach file. File size of your documents should not exceed 10MB</p> -->
+            </div>
             <input class="checkbox" type="checkbox">
-            <label for="upload">I want to protect my data by signing an NDA</label><br>
+            <label for="cmt">I want to protect my data by signing an NDA</label><br>
             <button class="submit" type="submit">Submit</button>
             </form>
             <!-- Icon Text -->
@@ -65,7 +68,7 @@
 
         </div>
         <iframe class="map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.8636682144106!2d105.74725459999999!3d21.0381403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313455e940879933%3A0xcf10b34e9f1a03df!2zVHLGsOG7nW5nIENhbyDEkeG6s25nIEZQVCBQb2x5dGVjaG5pYw!5e0!3m2!1svi!2s!4v1706272592405!5m2!1svi!2s"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.8043891601383!2d105.73621317472863!3d21.04051148737591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31345550b525aa03%3A0x3fdefc40f69a023a!2zQ2FvIMSR4bqzbmcgRlBUIFBo4buRIFRy4buLbmggVsSDbiBCw7QgLCBQaMaw4budbmcgUGjGsMahbmcgQ2FuaCAsIHF14bqtbiBU4burIExpw6pt!5e0!3m2!1svi!2s!4v1706530510285!5m2!1svi!2s"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
