--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="/Lab1/Menu/menu.html" target="_blank">Lab1</a>
         <a href="/ASM/index.html" target="_blank">ASM</a>
         <a href="/Lab3/index.html" target="_blank">Lab3</a>
-        <a href="/Lab4/index.html" target="_blank"></a>
+        <a href="/Lab4/index.html" target="_blank">Lab4</a>
     </div>
  
 
