--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="/ASM/index.html" target="_blank">ASM</a>
         <a href="/Lab3/index.html" target="_blank">Lab3</a>
         <a href="/Lab4/index.html" target="_blank">Lab4</a>
+        <a href="/ASM-2/index.html">ASM-2</a>
     </div>
  
 
