--- a/ASM/index.html
+++ b/ASM/index.html
@@ -1,67 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASM</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.google.com/">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ASM</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
+
 <body>
-    <header>
-      <nav class="navbar container">
-        <a href="./index.html">
-          <img src="./img/logo.png" alt="logo" />
-        </a>
-        <ul class="main-menu">
-          <li href="#"><a class="link">Home</a></li>
-          <li href="#"><a class="link">About Us</a></li>
-          <li href="#"><a class="link">Blog</a></li>
-          <li href="#"><a class="btn-login">Login</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- Hero -->
-      <section class="hero">
-      <div class="container">
-        <div class="hero-content">
-          <h1 class="hero-heading text-xxl">A powerful solution to grow your startup. Fast!</h1>
-          <p class="hero-text">Organise, collaborate, and track progress seamlessly with our one-stop-shop startup growth tool.</p>
-          <p>
-            <div class="hero-buttons">
-              <a href="#" class="btn btn-primary">Get Started</a>
-              <a href="#" class="btn btn"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 18 23" fill="none">
-                <g clip-path="url(#clip0_0_1621)">
-                  <path d="M9 17.5C13.4183 17.5 17 13.9183 17 9.5C17 5.08172 13.4183 1.5 9 1.5C4.58172 1.5 1 5.08172 1 9.5C1 13.9183 4.58172 17.5 9 17.5Z" stroke="#131316" stroke-width="2" stroke-miterlimit="10"/>
-                  <path d="M4 21.5H14" stroke="#131316" stroke-width="2" stroke-miterlimit="10"/>
-                  <path d="M9 12.5C10.6569 12.5 12 11.1569 12 9.5C12 7.84315 10.6569 6.5 9 6.5C7.34315 6.5 6 7.84315 6 9.5C6 11.1569 7.34315 12.5 9 12.5Z" stroke="#131316" stroke-width="2" stroke-miterlimit="10"/>
-                </g>
-                <defs>
-                  <clipPath id="clip0_0_1621">
-                    <rect width="18" height="22" fill="white" transform="translate(0 0.5)"/>
-                  </clipPath>
-                </defs>
-              </svg> Book a demo</a>
-            </div>
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- Video Section -->
-    <section class="video bg-black">
-      <div class="container-sm">
-        <h2 class="video-heading text-xl text-center">See how it works and get started
-          in less than 2 minutes</h2>
-      </div>
-      <div class="video-content">
-        <a class="video-preview" href="#"><img src="/ASM/img/video-preview.png" alt="video"></a>
-        <a  href="#" class="btn btn-primary">Get Started</a>
-      </div>
-    </section>
-    <!-- Testimonials -->
-    <section class="testimonials bg-dark">
+  <header>
+    <nav class="navbar container">
+      <a href="./index.html">
+        <img src="./img/logo.png" alt="logo" />
+      </a>
+      <ul class="main-menu">
+        <li href="#"><a class="link">Home</a></li>
+        <li href="#"><a class="link">About Us</a></li>
+        <li href="#"><a class="link">Blog</a></li>
+        <li href="#"><a class="btn-login">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- Hero -->
+  <section class="hero">
     <div class="container">
-      <h3 class="testmonials-heading text-xl">Don't just take our word for it, see the success  stories from businesses just like yours.</h3>
+      <div class="hero-content">
+        <h1 class="hero-heading text-xxl">A powerful solution to grow your startup. Fast!</h1>
+        <p class="hero-text">Organise, collaborate, and track progress seamlessly with our one-stop-shop startup growth
+          tool.</p>
+        <p>
+        <div class="hero-buttons">
+          <a href="#" class="btn btn-primary">Get Started</a>
+          <a href="#" class="btn btn"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 18 23"
+              fill="none">
+              <g clip-path="url(#clip0_0_1621)">
+                <path
+                  d="M9 17.5C13.4183 17.5 17 13.9183 17 9.5C17 5.08172 13.4183 1.5 9 1.5C4.58172 1.5 1 5.08172 1 9.5C1 13.9183 4.58172 17.5 9 17.5Z"
+                  stroke="#131316" stroke-width="2" stroke-miterlimit="10" />
+                <path d="M4 21.5H14" stroke="#131316" stroke-width="2" stroke-miterlimit="10" />
+                <path
+                  d="M9 12.5C10.6569 12.5 12 11.1569 12 9.5C12 7.84315 10.6569 6.5 9 6.5C7.34315 6.5 6 7.84315 6 9.5C6 11.1569 7.34315 12.5 9 12.5Z"
+                  stroke="#131316" stroke-width="2" stroke-miterlimit="10" />
+              </g>
+              <defs>
+                <clipPath id="clip0_0_1621">
+                  <rect width="18" height="22" fill="white" transform="translate(0 0.5)" />
+                </clipPath>
+              </defs>
+            </svg> Book a demo</a>
+        </div>
+        </p>
+      </div>
+    </div>
+  </section>
+  <!-- Video Section -->
+  <section class="video bg-black">
+    <div class="container-sm">
+      <h2 class="video-heading text-xl text-center">See how it works and get started
+        in less than 2 minutes</h2>
+    </div>
+    <div class="video-content">
+      <a class="video-preview" href="#"><img src="/ASM/img/video-preview.png" alt="video"></a>
+      <a href="#" class="btn btn-primary">Get Started</a>
+    </div>
+  </section>
+  <!-- Testimonials -->
+  <section class="testimonials bg-dark">
+    <div class="container">
+      <h3 class="testmonials-heading text-xl">Don't just take our word for it, see the success stories from businesses
+        just like yours.</h3>
       <div class="testimonials-grid">
         <div class="card">
           <p>
@@ -73,7 +82,9 @@
 
         <div class="card">
           <p>
-            “As a small business owner, it's important to have a tool that can help me keep track of everything. The Growth app has been a lifesaver for me, allowing me to manage my contacts, schedule appointments, and track progress all in one place..”
+            “As a small business owner, it's important to have a tool that can help me keep track of everything. The
+            Growth app has been a lifesaver for me, allowing me to manage my contacts, schedule appointments, and track
+            progress all in one place..”
           </p>
           <p>Jonathan Lee</p>
           <p>Red Bolt</p>
@@ -81,7 +92,8 @@
 
         <div class="card">
           <p>
-            “The dashboards and reporting feature has provided valuable insights into our performance and helped us make data-driven decisions. It's a game changer for us.”          </p>
+            “The dashboards and reporting feature has provided valuable insights into our performance and helped us make
+            data-driven decisions. It's a game changer for us.” </p>
           <p>David Wilson</p>
           <p>Slide</p>
         </div>
@@ -92,32 +104,34 @@
   <section class="pricing text-center">
     <div class="container-sm">
       <h3 class="pricing-heading text-xl text-center">Pricing</h3>
-      <p class="pricing-subheading text-md text-center"> Start free and scale while you grow. No hidden fees. Unlimited users for free. </p>
+      <p class="pricing-subheading text-md text-center"> Start free and scale while you grow. No hidden fees. Unlimited
+        users for free. </p>
       <div class="pricing-grid">
         <!-- Pricing card 1 -->
         <div class="card bg-light">
           <div class="pricing-card-header">
             <h4 class="pricing-heading text-xl">Simple</h4>
-            <p class="pricing-card-subheading">Keep track of your contacts, gain valuable insights, analyse live data and performance metrics.</p>
+            <p class="pricing-card-subheading">Keep track of your contacts, gain valuable insights, analyse live data
+              and performance metrics.</p>
             <p class="pricing-card-price">
               <span class="text-xl">Free</span>
-              * No credit card required 
+              * No credit card required
             </p>
           </div>
           <div class="pricing-card-body">
             <ul>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Real-time monitoring</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Real-time monitoring</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Track key performance indicators</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Track key performance indicators</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Schedule appointments</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Schedule appointments</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Organize, delegate and keep track of tasks</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Organize, delegate and keep track of tasks</i></li>
             </ul>
             <a href="#" class="btn btn-primary btn-black">Get Started</a>
           </div>
@@ -126,37 +140,41 @@
         <div class="card bg-black">
           <div class="pricing-card-header">
             <h4 class="pricing-heading text-xl">Premium</h4>
-            <p class="pricing-card-subheading">Keep track of your contacts, gain valuable insights, analyse live data and performance metrics.</p>
+            <p class="pricing-card-subheading">Keep track of your contacts, gain valuable insights, analyse live data
+              and performance metrics.</p>
             <p class="pricing-card-price">
               <span class="text-xl">$49</span>
-              /month            </p>
+              /month
+            </p>
           </div>
           <div class="pricing-card-body">
             <ul>
               <li>Everything from the free plan plus:</li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Data-driven decisions</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Data-driven decisions</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Data visualisation</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Data visualisation</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Store and organise contact information</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Store and organise contact information</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Store and organise contact information</i></li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Store and organise contact information</i></li>
               <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-                <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10"/>
-              </svg>Teal-time communication tools for messaging and video conferencing</li>
+                  <path d="M15 1L6.04 9.4L1 4.768" stroke="#131316" stroke-width="1.5" stroke-miterlimit="10" />
+                </svg>Teal-time communication tools for messaging and video conferencing</li>
             </ul>
             <a href="#" class="btn btn-primary btn-black">Get Started</a>
           </div>
         </div>
       </div>
-      <p class="pricing-footer text-center">All prices are in USD and charged per month with applicable taxes added at checkout.</p>
+      <p class="pricing-footer text-center">All prices are in USD and charged per month with applicable taxes added at
+        checkout.</p>
     </div>
   </section>
-    <footer></footer>
-  </body>
+  <footer></footer>
+</body>
+
 </html>
